--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "license": "MIT",
   "scripts": {
     "watch": "tsc -w",
-    "dev": "ts-node-dev --inspect --respawn --transpile-only --ignore-watch node_modules src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/index.ts",
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "@typegoose/typegoose": "^7.4.4",
     "apollo-server-express": "^2.19.0",
     "argon2": "^0.27.0",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.3",
     "mongoose": "^5.11.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.9",
+    "@types/mongodb": "^3.6.1",
     "@types/mongoose": "^5.10.1",
     "@types/node": "^14.14.10",
     "add": "^2.0.6",
