--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "license": "MIT",
   "scripts": {
     "watch": "tsc -w",
-    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/index.ts",
-    "start": "node dist/index.js"
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/server.ts",
+    "start": "node dist/index.js",
+    "test": "jest"
   },
   "dependencies": {
     "apollo-server-express": "^2.19.0",
@@ -16,19 +17,29 @@
     "graphql": "^15.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
-    "mongoose": "^5.11.2",
+    "mongoose": "^5.11.5",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.9",
+    "@types/jest": "^26.0.18",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongodb": "^3.6.1",
+    "@types/mongodb": "^3.6.3",
     "@types/mongoose": "^5.10.1",
-    "@types/node": "^14.14.10",
+    "@types/node": "^14.14.11",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
     "add": "^2.0.6",
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-graphql": "^4.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "graphql-request": "^3.3.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6",
+    "ts-jest": "^26.4.4",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.2",
     "yarn": "^1.22.10"
