--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch": "tsc -w",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/server.ts",
     "start": "node dist/index.js",
-    "test": "jest"
+    "test": "jest --detectOpenHandles"
   },
   "dependencies": {
     "apollo-server-express": "^2.19.0",
