--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,22 @@
 # Application
+ENVIRONMENT=
 APP_SECRET=
-APP_API_URL=http://localhost:3333
-APP_WEB_URL=http://localhost:4000
+APP_WEB_URL=http://localhost:3000
+APP_HOST=http://localhost
+PORT=4000
+
+#MongoDB
+MONGODB_USERNAME=
+MONGODB_PASSWORD=
+MONGODB_HOST=localhost
+MONGODB_PORT=27017
+MONGODB_DATABASE=
+
+#Vimeo
+VIMEO_ACCESS_TOKEN=
+VIMEO_USER_ID=
+
+# AWS Credentials
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=
