--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "watch": "tsc -w",
+    "watch": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files -w",
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/server.ts",
     "start": "node dist/index.js",
     "test": "jest --detectOpenHandles"
@@ -12,28 +13,50 @@
   "dependencies": {
     "apollo-server-express": "^2.19.0",
     "argon2": "^0.27.0",
+    "aws-sdk": "^2.831.0",
+    "axios": "^0.21.1",
+    "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "graphql": "^15.4.0",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.4.7",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.5",
+    "multer": "^1.4.2",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/node": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-decorators": "^7.12.12",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
     "@types/bcryptjs": "^2.4.2",
+    "@types/connect-redis": "^0.0.16",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
+    "@types/express-session": "^1.17.3",
     "@types/jest": "^26.0.18",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.6.3",
     "@types/mongoose": "^5.10.1",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.11",
+    "@types/redis": "^2.8.28",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-parameter-decorator": "^1.0.16",
+    "babel-plugin-transform-metadata": "^4.0.2",
+    "babel-plugin-transform-typescript-metadata": "^0.3.1",
     "eslint": "^7.15.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.0.0",
