Fixed Redis to use env var

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,11 @@ MONGODB_HOST=localhost
 MONGODB_PORT=27017
 MONGODB_DATABASE=
 
+#Redis
+REDIS_HOST=localhost
+REDIS_PASSWORD=
+REDIS_PORT=
+
 #Vimeo
 VIMEO_ACCESS_TOKEN=
 VIMEO_USER_ID=
