--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,19 @@ jobs:
         uses: actions/setup-node@v2.1.4
         with:
           node-version: 14.x
+      
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
 
+      - uses: actions/cache@v2
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      
       # Install yarn dependecies
       - name: Install dependencies
         run: yarn
@@ -24,7 +36,7 @@ jobs:
       - name: Run build
         run: yarn build
         
-      # Copy dist to server
+      # Copy code to Digital Ocean server
       - name: copy dist to Digital Ocean server
         uses: appleboy/scp-action@master
         with:
@@ -32,10 +44,10 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
-          source: "."
+          source: ".,!node_modules"
           target: "~/app/headshare_server"
       
-      # Substitute current code in Digital Server server for the new one
       # Install yarn dependencies in server
+        
       # Run migrations
       # Restart nodejs server
