Corrected transpilation problem

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,11 @@
     ],
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "./node_modules",
+    "./node_modules/*",
+    "./node_modules/@types/node/index.d.ts",
+    "dist"
   ],
   "include": [
     "./src/**/*.tsx",
