--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "watch": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files -w",
-    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
+    "watch": "tsc --skipLibCheck -w",
+    "build": "tsc --skipLibCheck",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/server.ts",
     "start": "node dist/index.js",
     "test": "jest --detectOpenHandles"
@@ -15,6 +15,7 @@
     "argon2": "^0.27.0",
     "aws-sdk": "^2.831.0",
     "axios": "^0.21.1",
+    "class-validator": "^0.13.1",
     "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
