--- a/package.json
+++ b/package.json
@@ -8,7 +8,16 @@
     "build": "tsc --skipLibCheck",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/server.ts",
     "start": "node dist/index.js",
-    "test": "jest --detectOpenHandles"
+    "test": "jest --detectOpenHandles",
+    "test2": "jest",
+    "husky": "npx husky",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "cross-env CI=true yarn test2 --bail --findRelatedTests"
+    ]
   },
   "dependencies": {
     "apollo-server-express": "^2.19.0",
@@ -40,6 +49,8 @@
     "@babel/plugin-proposal-decorators": "^7.12.12",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "^0.0.16",
     "@types/cors": "^2.8.9",
@@ -59,6 +70,9 @@
     "babel-plugin-parameter-decorator": "^1.0.16",
     "babel-plugin-transform-metadata": "^4.0.2",
     "babel-plugin-transform-typescript-metadata": "^0.3.1",
+    "commitizen": "^4.2.3",
+    "cross-env": "^7.0.3",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "^7.15.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.0.0",
@@ -66,12 +80,19 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.2.0",
     "graphql-request ": "^3.3.0",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
+    "lint-staged": "^10.5.4",
     "nodemon": "^2.0.6",
     "prettier": "^2.2.1",
     "ts-jest": "^26.4.4",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.2",
     "yarn": "^1.22.10"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
