--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
       "@typescript-eslint/no-unused-vars": ["error", {
         "argsIgnorePattern": "^_"
       }],
+      "import/prefer-default-export": "off",
       "no-underscore-dangle": "off",
       "import/extensions": [
         "error",
