--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "watch": "tsc --skipLibCheck -w",
     "build": "tsc --skipLibCheck",
-    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/server.ts",
-    "start": "node dist/index.js",
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/main.ts",
+    "start": "node dist/main.js",
     "test": "jest --detectOpenHandles",
     "test2": "jest",
     "husky": "npx husky",
@@ -20,6 +20,7 @@
     ]
   },
   "dependencies": {
+    "apollo-server-core": "^2.22.2",
     "apollo-server-express": "^2.19.0",
     "argon2": "^0.27.0",
     "aws-sdk": "^2.831.0",
@@ -35,8 +36,10 @@
     "jsonwebtoken": "^8.5.1",
     "mime": "^2.4.7",
     "mongodb": "^3.6.3",
+    "mongodb-memory-server": "^6.9.6",
     "mongoose": "^5.11.5",
     "multer": "^1.4.2",
+    "pagarme": "^4.16.0",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
@@ -66,6 +69,7 @@
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
+    "apollo-server-testing": "^2.22.2",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-parameter-decorator": "^1.0.16",
     "babel-plugin-transform-metadata": "^4.0.2",
@@ -82,6 +86,7 @@
     "graphql-request ": "^3.3.0",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
+    "jest-environment-node": "^26.6.2",
     "lint-staged": "^10.5.4",
     "nodemon": "^2.0.6",
     "prettier": "^2.2.1",
