--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "apollo-server-core": "^2.22.2",
+    "apollo-server-errors": "^2.4.2",
     "apollo-server-express": "^2.19.0",
     "argon2": "^0.27.0",
     "aws-sdk": "^2.831.0",
