--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "tsc --skipLibCheck",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/main.ts",
     "start": "node dist/main.js",
-    "test": "jest --detectOpenHandles",
-    "test2": "jest",
+    "test": "node -r dotenv/config $(which jest) --detectOpenHandles",
     "husky": "npx husky",
     "prepare": "husky install"
   },
@@ -33,7 +32,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "graphql": "^15.4.0",
+    "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
     "mime": "^2.4.7",
     "mongodb": "^3.6.3",
@@ -43,6 +42,7 @@
     "pagarme": "^4.16.0",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
+    "stripe": "^8.145.0",
     "type-graphql": "^1.1.1"
   },
   "devDependencies": {
